# mrchem

./: .clang-format  .codecov.yml  .editorconfig  .envrc  .gitattributes  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  .zenodo.json  .~lock.tau.ppt#  AUTHORS  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CTestConfig.cmake  CTestCustom.cmake.in  GTO_MW.xlsx  LICENSE  Pipfile  README.md  TODO  config.h.in  foo  h2o.inp  makedoc.sh  mrchem_mpi_vecmult_1task.out  mrchem_mpi_vecmult_2task.out  mrcpp.includes.in  requirements.txt  setup  valinomycine.inp  version.h.in
pilot/: CMakeLists.txt  README  mrchem-pilot.cpp  mrchem.cpp  mrchem.cpp.sample  mrchem.in  mrchem.inp  mrcpp.cpp.sample  mrgrid.cpp.sample  mrgrid.inp  template.yml  test.bas  test.en  test.mo
python/: CMakeLists.txt  README.md  mrchem.in  template.yml
python/mrchem/: CUBEparser.py  __init__.py  api.py  cli.py  config.py.in  helpers.py  periodictable.py  physical_constants.py  update_input_parser.py  validators.py
src/: CMakeLists.txt  SCFDriver.cpp  SCFDriver.h  driver.cpp  driver.h  mrchem.cpp  mrchem.h  mrchem.in  mrenum.h  mrenv.cpp  mrenv.h  parallel.cpp  parallel.h
src/analyticfunctions/: CMakeLists.txt  CUBEfunction.cpp  CUBEfunction.h  FiniteNucleusGaussian.h  FiniteNucleusSphere.h  HarmonicOscillatorFunction.h  HydrogenFunction.cpp  HydrogenFunction.h  NuclearFunction.cpp  NuclearFunction.h  NuclearGradientFunction.cpp  NuclearGradientFunction.h  PointNucleusHFYGB.h  PointNucleusMinimum.h  PointNucleusParabola.h
src/chemistry/: CMakeLists.txt  CUBEfile.cpp  CUBEfile.h  Cavity.cpp  Cavity.h  Element.h  Molecule.cpp  Molecule.h  Nucleus.h  PeriodicTable.cpp  PeriodicTable.h  PhysicalConstants.cpp  PhysicalConstants.h  chem_utils.cpp  chem_utils.h  chemistry_fwd.h  chemistry_utils.cpp  chemistry_utils.h  periodictable.py
src/environment/: CMakeLists.txt  Cavity.cpp  Cavity.h  DHScreening.cpp  DHScreening.h  GPESolver.cpp  GPESolver.h  LPBESolver.cpp  LPBESolver.h  PBESolver.cpp  PBESolver.h  Permittivity.cpp  Permittivity.h  SCRF.cpp  SCRF.h  StepFunction.cpp  StepFunction.h
src/initial_guess/: CMakeLists.txt  chk.cpp  chk.h  core.cpp  core.h  core_guess.cpp  core_guess.h  cube.cpp  cube.h  gto.cpp  gto.h  gto_guess.cpp  gto_guess.h  hydrogen.cpp  hydrogen_guess.cpp  mw.cpp  mw.h  sad.cpp  sad.h  sad_guess.cpp
src/input/: CMakeLists.txt  mrchem.in  template.html  template.rst  template.yml
src/mrchem/: Atom.cpp  Atom.h  AtomicElement.h  CMakeLists.txt  Intgrl.cpp  MREnv.cpp  MREnv.h  MolecularGridGenerator.h  Molecule.h  OrbExp.h  PeriodicTable.cpp  PeriodicTable.h  SCFDriver.cpp  SCFDriver.h  XCFunctional.cpp  XCFunctional.h  XCProjector.h  mrchem.cpp  mrchem.h  mrchem.in
src/mrcpp/: CMakeLists.txt
src/mrdft/: CMakeLists.txt  Factory-orig.cpp  Factory-orig.h  Factory-original.cpp  Factory.cpp  Factory.h  Functional-original.cpp  Functional.cpp  Functional.h  GGA.OK  GGA.cpp  GGA.cpp2  GGA.cpp_24nov  GGA.h  GGA.save  Grid.h  LDA.cpp  LDA.h  LibXC.cpp  LibXC.h  MRDFT.cpp  MRDFT.h  MRDFT.save  Regularizer.h  SpinGGA.cpp  SpinGGA.h  SpinLDA.cpp  SpinLDA.h  XCFunctional.cpp  XCFunctional.h  xc_utils.cpp  xc_utils.h
src/mrgrid/: AOBasis.h  AOContraction.h  Atom.cpp  Atom.h  AtomicElement.h  CMakeLists.txt  MREnv.cpp  MREnv.h  MolecularGridGenerator.cpp  MolecularGridGenerator.h  Molecule.cpp  Molecule.h  PeriodicTable.cpp  XCFunctional.cpp  XCFunctional.h  XCProjector.cpp  XCProjector.h  mrgrid.h  mrgrid.in
src/mrlibxc/: CMakeLists.txt  Factory.cpp  Factory.h  LibXC.h
src/mwreprlib/: AnalyticCalculator.cpp  AnalyticCalculator.h  AnalyticProjector.cpp  AnalyticProjector.h  BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  CopyAdaptor.h  Filter.h  FilterCache.cpp  FunctionNode.cpp  FunctionNode.h  FunctionProjector.cpp  FunctionProjector.h  FunctionTree.cpp  FunctionTree.h  FunctionTree_S.cpp  FunctionTree_S.h  GaussQuadrature.cpp  GaussQuadrature.h  GenNode.cpp  GenNode.h  GridAdaptor.cpp  GridAdaptor.h  GridCleaner.h  GridGenerator.cpp  GridGenerator.h  GridNode.cpp  GridNode.h  GridNodeBox.cpp  GridNodeBox.h  GridRefiner.cpp  HilbertIterator.h  HilbertPath.cpp  HilbertPath.h  InterpolatingBasis.cpp  InterpolatingBasis.h  LebesgueIterator.h  LegendreBasis.h  LegendrePoly.cpp  (+56 more)
src/mwutils/: AOBasis.cpp  AOBasis.h  AOContraction.cpp  AOContraction.h  CMakeLists.txt  DensExp.cpp  DensExp.h  Density.cpp  Density.h  GaussExp.cpp  GaussExp.h  GaussFunc.cpp  GaussFunc.h  GaussPoly.cpp  GaussPoly.h  Gaussian.cpp  Gaussian.h  Intgrl.cpp  Intgrl.h  OrbExp.cpp
src/properties/: CMakeLists.txt  DipoleMoment.h  GeometricDerivative.h  GeometryDerivatives.h  HirshfeldCharges.h  HyperFineCoupling.h  Magnetizability.h  NMRShielding.h  OrbitalEnergies.h  Polarizability.h  QuadrupoleMoment.h  SCFEnergy.h  SpinSpinCoupling.h  properties.h  properties_fwd.h
src/qmfunctions/: CMakeLists.txt  CUBEfunction.cpp  ComplexFunction.cpp  ComplexFunction.h  Density.cpp  Density.h  Orbital.cpp  Orbital.h  OrbitalIterator.cpp  OrbitalIterator.h  OrbitalVector.cpp  OrbitalVector.h  QMFunction.cpp  QMFunction.h  density_utils.cpp  density_utils.h  orbital_utils.cpp  orbital_utils.h  qmfunction_fwd.h  qmfunction_utils.cpp  qmfunction_utils.h  qmfunctions.cpp  qmfunctions.h
src/qmoperators/: AngularMomentumOperator.h  CMakeLists.txt  DeltaOperator.cpp  DeltaOperator.h  H_BB_dia.h  H_B_dip.h  H_B_spin.h  H_M_fc.h  (+36 more)
test/: BoundingBoxTest.cpp  CMakeLists.txt  DiracExchange.h  DiracExchangeD1.h  GridTest.cpp  LDAFunc.h  LegendrePolyTest.cpp  MoleculeTest.cpp  OperatorTest.cpp  PoissonTest.cpp  PolynomialTest.cpp  SCFTest.cpp  SerializationTest.cpp  SkeletonTest.cpp  TreeArithmeticTest.cpp  TreeTest.cpp  VWN5C.h  XCFunTest.cpp  he.bas  mrchem.inp  mwtest.h  test.overlap
test_cmake/: CMakeLists.txt  cmake_install.cmake
tests/: .gitignore  CMakeLists.txt  mrtest.h  runtest_config.py  tester.py  unit_tests.cpp
tools/: CMakeLists.txt  betzy.env  betzy.sh  build_remote.sh  diff_trees.cpp  fram.env  fram.sh  ls_tree.cpp  lstsource.sh  mrcpp_sources.in  sad.py  saga.env  saga.sh  stallo.env  stallo.sh  valgrind.sh
(+1213 files in other folders)
