add_executable(mrchem-pilot.x mrchem.cpp)
target_link_libraries(mrchem-pilot.x
  PRIVATE
    mrchem
  )

set(MRCHEM_DRIVER_DEBUG ON)
set(MRCHEM_EXECUTABLE ${PROJECT_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/mrchem-pilot.x)
configure_file(
  ${PROJECT_SOURCE_DIR}/pilot/mrchem.in
  ${PROJECT_BINARY_DIR}${CMAKE_FILES_DIRECTORY}/mrchem-pilot
  @ONLY
  )
file(
  COPY ${PROJECT_BINARY_DIR}${CMAKE_FILES_DIRECTORY}/mrchem-pilot
  DESTINATION ${PROJECT_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}
  FILE_PERMISSIONS
    OWNER_READ OWNER_WRITE OWNER_EXECUTE
    GROUP_READ GROUP_EXECUTE
    WORLD_READ WORLD_EXECUTE
  )

if(NOT EXISTS ${CMAKE_CURRENT_BINARY_DIR}/mrchem.inp)
  file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/mrchem.inp DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
endif()
